@@ -8,6 +8,7 @@ class Net::SSLeay::OCSP {
   use Net::SSLeay::OCSP_BASICRESP;
   use Net::SSLeay::X509_STORE;
   use Net::SSLeay::X509;
+  use Net::SSLeay::ASN1_GENERALIZEDTIME;
   
   native static method response_status_str : string ($code : long);
   
@@ -18,4 +19,6 @@ class Net::SSLeay::OCSP {
   native static method basic_add1_cert : int ($resp : Net::SSLeay::OCSP_BASICRESP, $cert : Net::SSLeay::X509);
   
   native static method check_nonce : int ($req : Net::SSLeay::OCSP_REQUEST, $resp : Net::SSLeay::OCSP_BASICRESP);
+  
+  native static method check_validity : int ($thisupd : Net::SSLeay::ASN1_GENERALIZEDTIME, $nextupd : Net::SSLeay::ASN1_GENERALIZEDTIME, $sec : long, $maxsec : long);
 }
