@@ -15,6 +15,7 @@
     * Add Net::SSLeay::OCSP#check_nonce method.
     * Add Net::SSLeay::OCSP_BASICRESP#DESTROY method.
     * Add Net::SSLeay::OCSP_CERTID#DESTROY method.
+    * Add Net::SSLeay::OCSP#check_validity method.
 0.012 2024-11-13
   [New Features]
     * Add Net::SSLeay::X509_STORE_CTX#set_error method.
